JU-599 fix unit tests